# flux-data-footprint

./: .gitignore  README.rst  pyproject.toml
FFP_Python/ETo_weighted/: Run_AMF_Daily.py  Run_AMF_Monthly.py  calc_footprint_FFP_climatology.py  calc_footprint_FFP_climatology_revised.py  license.txt
FFP_Python/example/: footprint_BOR.ipynb  p37r32_20170629_vernaleddysite_reflsurf_l8.tif.aux.xml
FFP_Python/example/example_ffp/: Vernal_2018_Canopy_Heights.csv  footprint_BOR.ipynb
FFP_Python/examples/BOR/: footprint_BOR.ipynb  p37r32_20170629_vernaleddysite_reflsurf_l8.tif
FFP_Python/examples/celery_site/: FP_Celery.csv  calc_footprint_FFP_climatology.py  celery_windrose_7_2_through_7_4.html
FFP_Python/examples/celery_site/celery_out/: celery_windrose.html
FFP_Python/examples/using_fluxdataqaqc_with_AMF/: calc_footprint_FFP_climatology.py  footprint_funcs.py
FFP_Python/examples/using_fluxdataqaqc_with_AMF/output/: 2011-01-01_US-CRT.tif
example notebooks/celery_site/: calc_footprint_FFP_climatology.py  celery.ipynb
example notebooks/using_fluxdataqaqc_with_AMF/: Run_AMF_Daily.ipynb  US-CRT_config.ini  example with flux-data-qaqc.ipynb
scripts/: Run_AMF_Daily.ipynb  Run_AMF_Daily.py  Run_AMF_Monthly.ipynb  Run_AMF_Monthly.py  calc_footprint_FFP.py  calc_footprint_FFP_climatology.py  calc_footprint_FFP_climatology_revised.py  ffp.py  footprint_funcs.py
tests/: test_ffp.py
