[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = "venv"

[tool.mypy]
python_version = 3.8
strict_optional = true

[tool.poetry]
name = "flux-data-footprint"
version = "0.1.0"
description = "A Python library for processing data from flux footprints."
authors = ["John Volk <John.Volk@dri.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
# Add any additional dependencies here, for example:
numpy = ">=1.20.0"
matplotlib = ">=2.0"
scipy = ">=1.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
